Main UI
- Added three new library icons: horror, detective and humor
- Reduced line spacing of book name
- Hide series metadata when they are empty

Reader UI
- 

Build
- 

Fixes
- Fixed book details title