@@ -2,6 +2,7 @@ Main UI
 - Added three new library icons: horror, detective and humor
 - Reduced line spacing of book name
 - Hide series metadata when they are empty
+- Added book title to search results
 
 Reader UI
 - 
